--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "mdgachasim"
 version = "1.0.5"
 description = "A simulator that computes gem cost distributions of Yu-Gi-Oh! Master Duel packs"
 authors = ["Marian Plivelic <MarianPlivelic@gmail.com>"]
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
