--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,76 @@
-[tool.poetry]
+[project]
 name = "mdgachasim"
-version = "1.0.10"
-description = "A simulator that computes gem cost distributions of Yu-Gi-Oh! Master Duel packs"
-authors = ["Marian Plivelic <MarianPlivelic@gmail.com>"]
-license = "MIT"
-
-[tool.poetry.dependencies]
-python = "^3.8"
-pydantic = "^1.9.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-jupyter = "^1.0.0"
-black = "^21.12b0"
-flake8 = "^4.0.1"
-rope = "^0.22.0"
-mypy = "^0.931"
-tqdm = "^4.62.3"
-jedi = "^0.18.1"
-matplotlib = "^3.5.1"
-seaborn = "^0.11.2"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "annotated-types==0.7.0",
+    "anyio==4.8.0",
+    "build==1.2.2.post1",
+    "cachecontrol==0.14.2",
+    "certifi==2025.1.31",
+    "cffi==1.17.1",
+    "charset-normalizer==3.4.1",
+    "cleo==2.1.0",
+    "contourpy==1.3.1",
+    "crashtest==0.4.1",
+    "cryptography==44.0.2",
+    "cycler==0.12.1",
+    "distlib==0.3.9",
+    "dulwich==0.22.8",
+    "fastjsonschema==2.21.1",
+    "filelock==3.17.0",
+    "findpython==0.6.2",
+    "fonttools==4.56.0",
+    "h11==0.14.0",
+    "httpcore==1.0.7",
+    "httpx==0.28.1",
+    "idna==3.10",
+    "installer==0.7.0",
+    "jaraco-classes==3.4.0",
+    "jaraco-context==6.0.1",
+    "jaraco-functools==4.1.0",
+    "jeepney==0.9.0",
+    "keyring==25.6.0",
+    "kiwisolver==1.4.8",
+    "matplotlib==3.10.1",
+    "more-itertools==10.6.0",
+    "msgpack==1.1.0",
+    "numpy==2.2.3",
+    "packaging==24.2",
+    "pandas==2.2.3",
+    "pbs-installer==2025.2.12",
+    "pillow==11.1.0",
+    "pkginfo==1.12.1.2",
+    "platformdirs==4.3.6",
+    "poetry-core==2.1.1",
+    "poetry==2.1.1",
+    "pycparser==2.22",
+    "pydantic==2.10.6",
+    "pydantic-core==2.27.2",
+    "pyparsing==3.2.1",
+    "pyproject-hooks==1.2.0",
+    "pyproject-toml==0.1.0",
+    "python-dateutil==2.9.0.post0",
+    "pytz==2025.1",
+    "rapidfuzz==3.12.2",
+    "requests==2.32.3",
+    "requests-toolbelt==1.0.0",
+    "scipy==1.15.2",
+    "seaborn==0.13.2",
+    "secretstorage==3.3.3",
+    "setuptools==75.8.2",
+    "shellingham==1.5.4",
+    "six==1.17.0",
+    "sniffio==1.3.1",
+    "tomlkit==0.13.2",
+    "trove-classifiers==2025.3.3.18",
+    "typing-extensions==4.12.2",
+    "tzdata==2025.1",
+    "urllib3==2.3.0",
+    "uv==0.6.5",
+    "virtualenv==20.29.3",
+    "wheel==0.45.1",
+    "zstandard==0.23.0",
+]
